# last-seen

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
attachments/: taxonomy.py
inspector/: inspect_attachments.py
lastseen/: cli.py  config.py  logging.py
lastseen/attachments/: __init__.py  taxonomy.py
lastseen/downloader/: __init__.py  media.py
lastseen/exporter/: chunked_json.py  json_export.py
lastseen/parser/: __init__.py  vk_html.py
parser/: vk_html.py
tests/: test_parse_dialog.py  test_parse_page.py
viewer/: app.js  index.html  styles.css
